# sdl3-2d

./: .clangd.old  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Makefile  PROMPT.md  README.md
docs/: index.html  style.css
docs/2d/: 01-hello-window.html  02-drawing-primitives.html  03-handling-input.html  04-delta-time.html  05-loading-textures.html  06-sprite-animation.html  07-collision-detection.html  08-audio-basics.html  09-text-rendering.html  10-tilemap-rendering.html  11-particle-systems.html  12-mini-game-pong.html  index.html
docs/3d/: 01-hello-triangle.html  02-cross-platform-shaders.html  03-vertex-buffers.html  04-index-buffers-and-quads.html  05-uniforms-and-mvp.html  06-the-3d-cube.html  07-depth-testing.html  08-textures-and-samplers.html  09-phong-lighting.html  10-multiple-objects.html  11-fps-camera.html  12-render-to-texture.html  13-shadercross-in-practice.html  index.html
examples/: callbacks.cpp  traditional.c
examples/c/: gfx.c  gfx.h  traditional.c
examples/cpp/: callbacks.cpp  gfx.cpp  gfx.hpp
examples/cpp-bgfx/: README.md  hello_bgfx.cpp  triangle_bgfx.cpp
examples/cpp-bgfx/shaders/: README.md  fs_triangle.sc  varying.def.sc  vs_triangle.sc
examples/cpp-gpu/: triangle.cpp
examples/cpp-gpu-shadercross/: README.md  triangle_shadercross.cpp
examples/cpp-gpu-shadercross/shaders/: triangle.frag.glsl  triangle.frag.hlsl  triangle.vert.glsl  triangle.vert.hlsl
include/: gfx.h
memory/: 2026-05-17.md  2026-05-19.md  2026-05-20.md  2026-05-21.md
src/: gfx.c
